--- a/filedo.cabal
+++ b/filedo.cabal
@@ -25,15 +25,19 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
+      Actions.MergeData
+      Types
   other-modules:
       Paths_filedo
   hs-source-dirs:
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
+    , bytestring
     , optparse-applicative
+    , yaml
   default-language: Haskell2010
 
 executable filedo-exe
@@ -42,16 +46,19 @@ executable filedo-exe
       Commands
       Commands.Compile
       Commands.MergeData
-      Data
       Options
+      Runners.MergeData
       Paths_filedo
   hs-source-dirs:
       app
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
+    , bytestring
     , filedo
     , optparse-applicative
+    , yaml
   default-language: Haskell2010
 
 test-suite filedo-test
@@ -63,7 +70,10 @@ test-suite filedo-test
       test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
+    , bytestring
     , filedo
     , optparse-applicative
+    , yaml
   default-language: Haskell2010
