--- a/filedo.cabal
+++ b/filedo.cabal
@@ -38,6 +38,7 @@ library
     , base >=4.7 && <5
     , bytestring
     , optparse-applicative
+    , stache
     , yaml
   default-language: Haskell2010
 
@@ -61,6 +62,7 @@ executable filedo-exe
     , bytestring
     , filedo
     , optparse-applicative
+    , stache
     , yaml
   default-language: Haskell2010
 
@@ -78,5 +80,6 @@ test-suite filedo-test
     , bytestring
     , filedo
     , optparse-applicative
+    , stache
     , yaml
   default-language: Haskell2010
