--- a/testfiles/templates/default-nodes/cfn/node-group.yaml
+++ b/testfiles/templates/default-nodes/cfn/node-group.yaml
@@ -10,7 +10,7 @@ Resources:
       ClusterName: {{global.clusterName}}
       NodeRole: !GetAtt DefaultNodeRole.Arn
       Subnets:
-        {{global.privateSubnetIds}}
+        {{#global.privateSubnetIds}}
         - {{ . }}
         {{/global.privateSubnetIds}}
 
