--- a/testfiles/templates/control-plane/cfn/cluster.yaml
+++ b/testfiles/templates/control-plane/cfn/cluster.yaml
@@ -14,7 +14,7 @@ Resources:
       RoleArn: !GetAtt ClusterRole.Arn
       ResourcesVpcConfig:
         SubnetIds:
-          {{global.privateSubnetIds}}
+          {{#global.privateSubnetIds}}
           - {{ . }}
           {{/global.privateSubnetIds}}
 
