refine options and data structures

--- a/package.yaml
+++ b/package.yaml
@@ -22,6 +22,7 @@ description:         Please see the README on GitHub at <https://github.com/gith
 dependencies:
 - base >= 4.7 && < 5
 - optparse-applicative
+- containers
 - yaml
 - aeson
 - bytestring
@@ -30,6 +31,8 @@ dependencies:
 - megaparsec
 - filepath >= 1.4.2.2 && < 1.4.100
 - extra
+- Glob
+- vector
 
 ghc-options:
 - -Wall
