--- a/filedo.cabal
+++ b/filedo.cabal
@@ -31,21 +31,25 @@ library
       Types
       Types.FileScoped
       Types.LazyFile
+      Types.Rule
   other-modules:
       Paths_filedo
   hs-source-dirs:
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      aeson
+      Glob
+    , aeson
     , base >=4.7 && <5
     , bytestring
+    , containers
     , extra
     , filepath >=1.4.2.2 && <1.4.100
     , megaparsec
     , optparse-applicative
     , stache
     , text
+    , vector
     , yaml
   default-language: Haskell2010
 
@@ -66,9 +70,11 @@ executable filedo-exe
       app
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      aeson
+      Glob
+    , aeson
     , base >=4.7 && <5
     , bytestring
+    , containers
     , extra
     , filedo
     , filepath >=1.4.2.2 && <1.4.100
@@ -76,6 +82,7 @@ executable filedo-exe
     , optparse-applicative
     , stache
     , text
+    , vector
     , yaml
   default-language: Haskell2010
 
@@ -88,9 +95,11 @@ test-suite filedo-test
       test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      aeson
+      Glob
+    , aeson
     , base >=4.7 && <5
     , bytestring
+    , containers
     , extra
     , filedo
     , filepath >=1.4.2.2 && <1.4.100
@@ -98,5 +107,6 @@ test-suite filedo-test
     , optparse-applicative
     , stache
     , text
+    , vector
     , yaml
   default-language: Haskell2010
