--- a/examples/templates/control-plane/cfn/cluster.yaml
+++ b/examples/templates/control-plane/cfn/cluster.yaml
@@ -14,9 +14,7 @@ Resources:
       RoleArn: !GetAtt ClusterRole.Arn
       ResourcesVpcConfig:
         SubnetIds:
-          {{#global.privateSubnetIds}}
-          - {{ . }}
-          {{/global.privateSubnetIds}}
+          {{>templates/partials/subnets.yaml}}
 
   ClusterRole:
     Type: AWS::IAM::Role
