--- a/filedo.cabal
+++ b/filedo.cabal
@@ -50,6 +50,7 @@ library
     , optparse-applicative
     , stache
     , text
+    , transformers
     , vector
     , yaml
   default-language: Haskell2010
@@ -83,6 +84,7 @@ executable filedo-exe
     , optparse-applicative
     , stache
     , text
+    , transformers
     , vector
     , yaml
   default-language: Haskell2010
@@ -108,6 +110,7 @@ test-suite filedo-test
     , optparse-applicative
     , stache
     , text
+    , transformers
     , vector
     , yaml
   default-language: Haskell2010
