--- a/examples/filedo.yaml
+++ b/examples/filedo.yaml
@@ -5,7 +5,7 @@ rules: # rule name
     targets: # targets the rule to apply on each pattern match, i.e. at every directory
       - "**/"
     exclude: # exclude directories, i.e. exclude cfn directories
-      - "**/cfn"
+      - "**/cfn/"
     pre: ["echo", "Listing all non-cfn directories", "AWS_PROFILE=$AWS_PROFILE", "AWS_REGION=$AWS_REGION"] # a command to run before the rule
     parallelise: true # run the commands in parallel, default false
     ignoreErrors: true # ignore command errors, default false
@@ -27,7 +27,7 @@ rules: # rule name
         # skip: true
         exclude: # exclude all yaml files in cfn directories
           - "**/cfn/*.yaml"
-          - "data/*"
+          - "**/data/*.yaml"
         useStdIn: true # pipes the file contents into the command via stdin
         command:
           - echo
