--- a/package.yaml
+++ b/package.yaml
@@ -48,6 +48,8 @@ ghc-options:
 
 library:
   source-dirs: src
+  default-extensions:
+  - ImportQualifiedPost
 
 executables:
   filedo-exe:
@@ -59,6 +61,8 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - filedo
+    default-extensions:
+    - ImportQualifiedPost
 
 tests:
   filedo-test:
@@ -70,3 +74,5 @@ tests:
     - -with-rtsopts=-N
     dependencies:
     - filedo
+    default-extensions:
+    - ImportQualifiedPost
