--- a/filedo.cabal
+++ b/filedo.cabal
@@ -57,7 +57,7 @@ library
     , yaml
   default-language: Haskell2010
 
-executable filedo-exe
+executable filedo
   main-is: Main.hs
   other-modules:
       Commands
