--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -66,20 +66,10 @@ jobs:
         run: |
           stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --copy-bins
 
-      # - uses: freckle/stack-action@v3
-      #   with:
-      #     stack-version: 2.9.1
-          # stack-args: --copy-bins
-      
-      - run: echo ${{ steps.build.outputs.local-bin-path }}}
-
-      - run: ls ${{ steps.build.outputs.local-bin-path }}
-
-      # tarball
       - name: Create tarball
         run: |
           mkdir -p dist
-          tar -czf dist/filedo-${{ runner.os }}.tar.gz -C ${{ steps.build.outputs.local-bin-path }} filedo
+          tar -czf dist/filedo-${{ runner.os }}.tar.gz -C ~/.local/bin filedo
 
       - uses: actions/upload-artifact@v2
         with:
