--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,5 +1,7 @@
 name: build
 on:
+  schedule:
+    - cron: '0 0 * * 0'
   workflow_dispatch:
   push:
     branches:
@@ -11,14 +13,15 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest] #, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
       - uses: actions/checkout@v3
       
-      - uses: haskell/actions/setup@v1
+      - uses: haskell/actions/setup@v2
         with:
           ghc-version: 9.2.4
+          enable-stack: true
           stack-version: 2.9.1
 
       - if: matrix.os != 'windows-latest'
@@ -71,7 +74,7 @@ jobs:
           mkdir -p dist
           tar -czf dist/filedo-${{ runner.os }}.tar.gz -C ~/.local/bin filedo
 
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           name: filedo-${{ runner.os }}.tar.gz
           path: dist/filedo-${{ runner.os }}.tar.gz
