--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -86,13 +86,13 @@ jobs:
       - if: matrix.os != 'windows-latest'
         uses: actions/upload-artifact@v3
         with:
-          name: ${{ github.ref }}-builds
+          name: ${{ github.sha }}-builds
           path: dist/filedo-${{ runner.os }}-${{ runner.arch }}.tar.gz
           if-no-files-found: error
 
       - if: matrix.os == 'windows-latest'
         uses: actions/upload-artifact@v3
         with:
-          name: ${{ github.ref }}-builds
+          name: ${{ github.sha }}-builds
           path: dist/filedo-${{ runner.os }}-${{ runner.arch }}.zip
           if-no-files-found: error
