Add GitHub actions (#1)
* add build and yaml actions

* ormolu formatting

* reformat app/ source

* reformat src code

* Fix pedantic warnings

* modify build action

* try new build steps

* adjust bin path

* update build

* add windows artifact support

* add dynamic versioning and fix windows zip command

* try get a successful windows cache

* fix windows artifact upload

* fix artifact name

* actions ready for release

--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,5 @@
 name:                filedo
-version:             0.1.0.0
+version:             0.1.0
 github:              "githubuser/filedo"
 license:             BSD3
 author:              "Author name here"
@@ -48,9 +48,11 @@ ghc-options:
 
 library:
   source-dirs: src
+  default-extensions:
+  - ImportQualifiedPost
 
 executables:
-  filedo-exe:
+  filedo:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -59,6 +61,8 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - filedo
+    default-extensions:
+    - ImportQualifiedPost
 
 tests:
   filedo-test:
@@ -70,3 +74,5 @@ tests:
     - -with-rtsopts=-N
     dependencies:
     - filedo
+    default-extensions:
+    - ImportQualifiedPost
