--- a/filedo.cabal
+++ b/filedo.cabal
@@ -5,7 +5,7 @@ cabal-version: 1.12
 -- see: https://github.com/sol/hpack
 
 name:           filedo
-version:        0.1.0.0
+version:        0.1.0
 description:    Please see the README on GitHub at <https://github.com/githubuser/filedo#readme>
 homepage:       https://github.com/githubuser/filedo#readme
 bug-reports:    https://github.com/githubuser/filedo/issues
@@ -37,6 +37,8 @@ library
       Paths_filedo
   hs-source-dirs:
       src
+  default-extensions:
+      ImportQualifiedPost
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       Glob
@@ -55,7 +57,7 @@ library
     , yaml
   default-language: Haskell2010
 
-executable filedo-exe
+executable filedo
   main-is: Main.hs
   other-modules:
       Commands
@@ -70,6 +72,8 @@ executable filedo-exe
       Paths_filedo
   hs-source-dirs:
       app
+  default-extensions:
+      ImportQualifiedPost
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       Glob
@@ -96,6 +100,8 @@ test-suite filedo-test
       Paths_filedo
   hs-source-dirs:
       test
+  default-extensions:
+      ImportQualifiedPost
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       Glob
