migrate process running to new module

--- a/filedo.cabal
+++ b/filedo.cabal
@@ -28,6 +28,7 @@ library
       Actions.Compile
       Actions.MergeData
       Actions.Process
+      Shell
       Types
       Types.Command
       Types.FileScoped
